--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ local-chromadb/raw-docs/lex_fridman_podcast.txt
 models/ggml-stable-vicuna-13B.q4_2.bin
 models/llama-30b-ggml-model-q4_0.bin
 development.pem
+api_key_openai.txt
