--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 local-chromadb/index/*.pkl filter=lfs diff=lfs merge=lfs -text
 local-chromadb/index/*.bin filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
